--- a/BeeTracker/app/src/main/res/values/strings.xml
+++ b/BeeTracker/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="inspect_new">New Inspection</string>
+    <string name="harvest_new">New Harvest</string>
 </resources>
