--- a/BeeTracker/app/src/main/res/values/strings.xml
+++ b/BeeTracker/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="inspect_new">New Inspection</string>
     <string name="harvest_new">New Harvest</string>
     <string name="sync_test">Synchronise</string>
+    <string name="print_test">Print Cache</string>
     <string name="sync_tel_num">01133203905</string>
 </resources>
